_UNITTEST/_TEMP/test_05_navigation_mix_output.txt
ERROR

======================================================================
ERROR: setUpClass (test_gds.GDSTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/wukunhuan/.local/bin/_UNITTEST/test_gds.py", line 69, in setUpClass
    cls._setup_remote_test_directory()
  File "/Users/wukunhuan/.local/bin/_UNITTEST/test_gds.py", line 93, in _setup_remote_test_directory
    raise RuntimeError(error_msg)
RuntimeError: 创建远端测试目录失败: 返回码=1, stderr=Traceback (most recent call last):
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE.py", line 32, in <module>
    from modules import (
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/__init__.py", line 30, in <module>
    from .file_operations import FileOperations
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/file_operations.py", line 2, in <module>
    from .file_core import FileCore
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/file_core.py", line 7, in <module>
    from .command_executor import debug_capture, debug_print
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/command_executor.py", line 275
    import time
               ^
IndentationError: unindent does not match any outer indentation level
, stdout=

----------------------------------------------------------------------
Ran 0 tests in 0.714s

FAILED (errors=1)
设置GDS全面测试环境...
远端测试目录: ~/tmp/gds_test_20251027_233902_054043_06f334f4
正在创建远端测试目录: ~/tmp/gds_test_20251027_233902_054043_06f334f4
使用测试模式，窗口将只显示复制指令和执行完成按钮
Warning: 创建远端测试目录失败: 返回码=1, stderr=Traceback (most recent call last):
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE.py", line 32, in <module>
    from modules import (
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/__init__.py", line 30, in <module>
    from .file_operations import FileOperations
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/file_operations.py", line 2, in <module>
    from .file_core import FileCore
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/file_core.py", line 7, in <module>
    from .command_executor import debug_capture, debug_print
  File "/Users/wukunhuan/.local/bin/GOOGLE_DRIVE_PROJ/modules/command_executor.py", line 275
    import time
               ^
IndentationError: unindent does not match any outer indentation level
, stdout=
